JavaScript_JQuery_AngularJS/src/objects/Student__c.object
<CustomObject>
    <description>Student belongs to a particular class.</description>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of student</description>
        <formula>(TODAY() -  Date_Of_Birth__c)/365.25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fill age of student.</inlineHelpText>
        <label>Age</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <description>Class of the student.</description>
        <inlineHelpText>Select class of student.</inlineHelpText>
        <label>Class</label>
        <referenceTo>Class__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <description>Date of birth of student</description>
        <inlineHelpText>Select date of birth of student</inlineHelpText>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email of student</description>
        <inlineHelpText>Fill Email-id of student.</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First Name of student</description>
        <inlineHelpText>Fill First Name of student.</inlineHelpText>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name of student</description>
        <inlineHelpText>Fill Last Name of student.</inlineHelpText>
        <label>Last Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Married__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Status : If married or not</description>
        <inlineHelpText>Fill marital status.</inlineHelpText>
        <label>Married</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wife_Name__c</fullName>
        <description>Wife Name of student</description>
        <inlineHelpText>Fill wife name, If any.</inlineHelpText>
        <label>Wife Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Show_Male_Students</fullName>
        <columns>FirstName__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Date_Of_Birth__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Sex__c</field>
            <operation>equals</operation>
            <value>Male</value>
        </filters>
        <label>Show Male Students</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DOBVelidation</fullName>
        <active>true</active>
        <errorConditionFormula>Date_Of_Birth__c  &gt;  TODAY()</errorConditionFormula>
        <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
        <errorMessage>Student DOB can not be greater than TODAY</errorMessage>
    </validationRules>
</CustomObject>